documentation de userController
Documentation complète de userController (methode: store, update et preferedLanguage)

Ajout du lien vers la documentation que j'ai utilisé dans controller.php
